--- a/.github/workflows/branch-protection.yml
+++ b/.github/workflows/branch-protection.yml
@@ -14,4 +14,7 @@ jobs:
       - name: Check Branch Name
         uses: actions/github-script@v6
         with:
-           allowed_prefixes: 'feature/'
+            allowed_prefixes: 'feature/'
+            ignore: 'master,develop'
+            min_length: 5
+            max_length: 20
